[package]
name = "horoscope"
version = "0.0.1"
authors = ["Kennet Postigo <kennetfpostigo@gmail.com>", "Jonathan Beltran <jbelt021@fiu.edu>"]
edition = "2018"
license = "MIT"

[dependencies]
async-channel = "1.4.2"
async-process = "1.0.0"
async-std = { version = "1.6.4", features = ["attributes"] }
async-trait = "0.1.40"
chrono = "0.4.15"
colored = "2.0.0"
futures = "0.3.5"
http-types = "2.4.0"
redis = "0.17.0"
serde = "1.0.116"
serde_json = "1.0.57"
serde_urlencoded = "0.6.1"
sqlx = { version = "0.3.5", features = ["postgres"] }
surf = "2.0.0-alpha.5"

[dev-dependencies]
async-std = { version = "1.6.4", features = ["attributes"] }
femme = "1.1.0"
serde = { version = "1.0.115", features = ["derive"] }
mockito = "0.23.3"
