[package]
name = "horoscope"
version = "0.0.1"
authors = ["Kennet Postigo <kennetfpostigo@gmail.com>", "Jonathan Beltran <jbelt021@fiu.edu>"]
description = "The all knowing scheduler"
edition = "2018"
license = "MIT"

[dependencies]
async-channel = "1.5.1"
async-process = "1.0.1"
async-std = { version = "1.6.5", features = ["attributes"] }
async-trait = "0.1.41"
bincode = "1.3.1"
chrono = "0.4.19"
colored = "2.0.0"
futures = "0.3.6"
http-types = "2.6.0"
k9 = "0.2.9"
redis = "0.17.0"
serde = "1.0.117"
serde_json = "1.0.59"
serde_urlencoded = "0.7.0"
sled = "0.34.4"
sqlx = { version = "0.3.5", features = ["postgres"] }
surf = "2.0.0"
typetag = "0.1.6"

[dev-dependencies]
async-std = { version = "1.6.5", features = ["attributes"] }
serde = { version = "1.0.117", features = ["derive"] }
mockito = "0.27.0"
