[package]
name = "horoscope"
version = "0.0.1"
authors = ["Kennet Postigo <kennetfpostigo@gmail.com>", "Jonathan Beltran <jbelt021@fiu.edu>"]
description = "The all knowing scheduler"
edition = "2018"
license = "MIT"

[dependencies]
async-channel = "1.5.1"
async-process = "1.0.1"
async-std = { version = "1.7.0", features = ["attributes", "unstable"] }
async-trait = "0.1.42"
bincode = "1.3.1"
chrono = "0.4.19"
colored = "2.0.0"
futures = "0.3.8"
http-types = "2.8.0"
serde = "1.0.117"
serde_json = "1.0.59"
serde_urlencoded = "0.7.0"
sled = "0.34.6"
surf = "2.1.0"
typetag = "0.1.6"

[dev-dependencies]
async-std = { version = "1.7.0", features = ["attributes", "unstable"] }
k9 = "0.5.0"
serde = { version = "1.0.117", features = ["derive"] }
mockito = "0.28.0"
